Push login template

--- a/DiamondStore/Pages/Shared/_Layout.cshtml
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml
@@ -13,13 +13,13 @@
     <link href="~/css/checkout.css" rel="stylesheet">
     <link href="~/css/contact.css" rel="stylesheet">
     <link href="~/css/shop.css" rel="stylesheet">
+    <link href="~/css/login.css" rel="stylesheet">
     <link href="~/css/services.css" rel="stylesheet">
-    <link href="~/css/blog.css" rel="stylesheet" asp-append-version="true">
+    <link href="~/css/blog.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/shop.css" />
     <link rel="stylesheet" type="text/css" href="~/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
 </head>
-<body>
     <header>
         <section id="top">
             <div class="container">
