--- a/DiamondStore/Pages/Shared/_Layout.cshtml.css
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml.css
@@ -1,6 +1,12 @@
 ﻿/* Please see documentation at https://learn.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+header {
+    width: 100%;
+    box-sizing: border-box; /* Ensures padding and border are included in the width */
+}
+
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
