--- a/DiamondStore/Pages/Product.cshtml
+++ b/DiamondStore/Pages/Product.cshtml
@@ -3,6 +3,7 @@
 
 @{
     Layout = "_Layout";
+    var sortOptions = new List<string> { "Price, Low To High", "Price, High To Low", "Alphabetically, A-Z", "Alphabetically, Z-A", "Date, New To Old" };
 }
 
 <section id="center" class="center_shop">
@@ -26,51 +27,12 @@
                         <div class="center_shop_1li clearfix">
                             <h5 class="mgt">CATEGORY</h5>
                             <div class="ziehharmonika">
-                                <h3 data-prefix="★" class="active"><a href="#">Bangles</a><div class="arrowDown"></div><div class="collapseIcon">–</div></h3>
-                                <div class="clickable" style="display: block;">
-                                    <ul>
-                                        <li><a href="#">For Men</a></li>
-                                        <li><a href="#">For Function</a></li>
-                                        <li><a href="#">For Kids</a></li>
-                                        <li><a href="#">For Women</a></li>
-                                    </ul>
-                                </div>
-                                <h3 data-prefix="★"><a href="#">Bracelets</a><div class="arrowDown"></div><div class="collapseIcon">+</div></h3>
-                                <div class="clickable">
-                                    <ul>
-                                        <li><a href="#">For Men</a></li>
-                                        <li><a href="#">For Function</a></li>
-                                        <li><a href="#">For Kids</a></li>
-                                        <li><a href="#">For Women</a></li>
-                                    </ul>
-                                </div>
-                                <h3 data-prefix="★"><a href="#">Earrings</a><div class="arrowDown"></div><div class="collapseIcon">+</div></h3>
-                                <div class="clickable" style="display: none;">
-                                    <ul>
-                                        <li><a href="#">For Men</a></li>
-                                        <li><a href="#">For Function</a></li>
-                                        <li><a href="#">For Kids</a></li>
-                                        <li><a href="#">For Women</a></li>
-                                    </ul>
-                                </div>
-                                <h3 data-prefix="★"><a href="#">Necklaces</a><div class="arrowDown"></div><div class="collapseIcon">+</div></h3>
-                                <div class="clickable">
-                                    <ul>
-                                        <li><a href="#">For Men</a></li>
-                                        <li><a href="#">For Function</a></li>
-                                        <li><a href="#">For Kids</a></li>
-                                        <li><a href="#">For Women</a></li>
-                                    </ul>
-                                </div>
-                                <h3 data-prefix="★"><a href="#">Rings</a><div class="arrowDown"></div><div class="collapseIcon">+</div></h3>
-                                <div class="clickable" style="display: none;">
-                                    <ul>
-                                        <li><a href="#">For Men</a></li>
-                                        <li><a href="#">For Function</a></li>
-                                        <li><a href="#">For Kids</a></li>
-                                        <li><a href="#">For Women</a></li>
-                                    </ul>
-                                </div>
+                                @foreach (var category in Model.Categories)
+                                {
+                                    <h3 data-prefix="★" class="@(Model.CategoryId == category.DiamondTypeId ? "active" : "")">
+                                        <a href="?CategoryId=@category.DiamondTypeId&SortOption=@Model.SortOption">@category.DiamondTypeName</a>
+                                    </h3>
+                                }
                             </div>
                         </div>
                         <div class="center_shop_1li1 clearfix">
@@ -102,72 +64,78 @@
                         <div class="center_product_1r2 clearfix">
                             <div class="col-sm-6">
                                 <div class="center_product_1r2l clearfix">
-                                    <p class="mgt">Showing 1–9 of 10 results</p>
+                                    <p class="mgt">Showing @Model.Diamonds.Items.Count of @Model.Diamonds.TotalItemsCount results</p>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="center_product_1r2r text-right clearfix">
                                     <h5 class="mgt">SORT BY</h5>
-                                    <select class="form-control" id="subject" name="subject">
-                                        <option>Price, Low To High</option>
-                                        <option>Price, High To Low</option>
-                                        <option>Alphabetically, A-Z</option>
-                                        <option>Alphabetically, Z-A</option>
-                                        <option>Date, New To Old</option>
+                                    <select class="form-control" id="subject" name="subject" onchange="location.href='?CategoryId=@Model.CategoryId&SortOption=' + this.value">
+                                        @foreach (var option in sortOptions)
+                                        {
+                                            <option value="@option" selected="@(Model.SortOption == option)">@option</option>
+                                        }
                                     </select>
                                 </div>
                             </div>
                         </div>
                         <div class="collcet_1r clearfix">
-                            <div class="col-sm-4 space_left">
-                                <div class="feature_2im clearfix">
-                                    <div class="feature_2im1 clearfix">
-                                        <a href="#"><img src="img/8.jpg" class="iw" alt="product"></a>
-                                    </div>
-                                    <div class="feature_2im2 clearfix">
-                                        <h6 class="mgt"><a class="bg_1" href="#">Featured</a></h6>
-                                        <h6 class="pull-right mgt"><a class="bg_4" href="#">Sale</a></h6>
-                                    </div>
-                                    <div class="feature_2im4 clearfix">
-                                        <div class="col-sm-6 space_left">
-                                            <h6><a class="bg_3" href="#">Popular</a></h6>
+                            @foreach (var diamond in Model.Diamonds.Items)
+                            {
+                                <div class="col-sm-4 space_left">
+                                    <div class="feature_2im clearfix">
+                                        <div class="feature_2im1 clearfix">
+                                            <a href="#"><img src="img/8.jpg" class="iw" alt="product"></a>
                                         </div>
-                                        <div class="col-sm-6 feature_2im4r space_right">
-                                            <ul>
-                                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-rocket"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
-                                            </ul>
+                                        <div class="feature_2im2 clearfix">
+                                            <h6 class="mgt"><a class="bg_1" href="#">@diamond.DiamondName</a></h6>
+                                            <h6 class="pull-right mgt"><a class="bg_4" href="#">Sale</a></h6>
                                         </div>
+                                        <div class="feature_2im4 clearfix">
+                                            <div class="col-sm-6 space_left">
+                                                <h6><a class="bg_3" href="#">Popular</a></h6>
+                                            </div>
+                                            <div class="col-sm-6 feature_2im4r space_right">
+                                                <ul>
+                                                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-rocket"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-heart-o"></i></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="item_last text-center clearfix">
+                                        <h4><a href="#">@diamond.DiamondName</a></h4>
+                                        <h6>
+                                            <span class="span_1 col_1 bold">@diamond.DiamondPrice.PricePerCarat</span>
+                                            <span class="col_2 span_2">$16.30</span>
+                                            <span>
+                                                <i class="fa fa-star-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                                <i class="fa fa-star-o"></i>
+                                            </span>
+                                        </h6>
                                     </div>
                                 </div>
-                                <div class="item_last text-center clearfix">
-                                    <h4><a href="#">Nibh Elementum</a></h4>
-                                    <h6>
-                                        <span class="span_1 col_1 bold">$14.64</span>
-                                        <span class="col_2 span_2">$16.30</span>
-                                        <span>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                        </span>
-                                    </h6>
-                                </div>
-                            </div>
-                            <!-- Repeat product items as needed -->
+                            }
                         </div>
                         <div class="product_1_last text-center clearfix">
                             <div class="col-sm-12">
                                 <ul>
-                                    <li><a href="#"><i class="fa fa-chevron-left"></i></a></li>
-                                    <li class="act"><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li><a href="#"><i class="fa fa-chevron-right"></i></a></li>
+                                    <li class="@(Model.Diamonds.PageIndex == 1 ? "disabled" : "")">
+                                        <a href="?CategoryId=@Model.CategoryId&SortOption=@Model.SortOption&PageIndex=@(Model.Diamonds.PageIndex - 1)"><i class="fa fa-chevron-left"></i></a>
+                                    </li>
+                                    @for (int i = 1; i <= Model.Diamonds.TotalPagesCount; i++)
+                                    {
+                                        <li class="@(Model.Diamonds.PageIndex == i ? "act" : "")">
+                                            <a href="?CategoryId=@Model.CategoryId&SortOption=@Model.SortOption&PageIndex=@i">@i</a>
+                                        </li>
+                                    }
+                                    <li class="@(Model.Diamonds.PageIndex == Model.Diamonds.TotalPagesCount ? "disabled" : "")">
+                                        <a href="?CategoryId=@Model.CategoryId&SortOption=@Model.SortOption&PageIndex=@(Model.Diamonds.PageIndex + 1)"><i class="fa fa-chevron-right"></i></a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
