create new UI for User Profile in Home Page

--- a/DiamondStore/Pages/Shared/_Layout.cshtml
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml
@@ -17,8 +17,10 @@
     <link href="~/css/services.css" rel="stylesheet">
     <link href="~/css/blog.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/shop.css" />
+    <link rel="stylesheet" href="~/css/userprofile.css" />
     <link rel="stylesheet" type="text/css" href="~/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
 </head>
     <header>
         <section id="top">
@@ -154,7 +156,7 @@
                             </li>
                         </ul>
                         <ul class="nav navbar-nav mgt navbar-right nav_r">
-                            <li><a class="m_tag" href="#"><i class="fa fa-user"></i></a></li>
+                            <li><a class="m_tag" href="/UserProfile"><i class="fa fa-user"></i></a></li>
                             <li class="dropdown">
                                 <a class="m_tag" href="#" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-shopping-cart"></i></a>
                                 <ul class="dropdown-menu drop_1" role="menu">
