add email service

--- a/DiamondStore/Pages/Login.cshtml
+++ b/DiamondStore/Pages/Login.cshtml
@@ -5,6 +5,18 @@
 }
 
 <section>
+    @if (!ModelState.IsValid)
+    {
+        <div class="alert alert-danger" style="width: 30%; margin: 0 auto; text-align: center;">
+            @foreach (var modelStateEntry in ModelState.Values)
+            {
+                foreach (var error in modelStateEntry.Errors)
+                {
+                    <p>@error.ErrorMessage</p>
+                }
+            }
+        </div>
+    }
     <div class="wrapper" style="margin: 10px auto">
         <div class="title-text">
             <div class="title login">Login</div>
