add forgot password and reset password function

--- a/DiamondStore/Pages/Login.cshtml
+++ b/DiamondStore/Pages/Login.cshtml
@@ -45,7 +45,7 @@
                     <div class="field">
                         <input type="password" placeholder="Password" asp-for="LoginInput.Password" required>
                     </div>
-                    <div class="pass-link"><a asp-page="./ForgotPassword">Forgot password?</a></div>
+                    <div class="pass-link"><a asp-page="./Auth/ForgotPassword">Forgot password?</a></div>
                     <div class="field btn">
                         <div class="btn-layer"></div>
                         <input type="submit" value="Login">
