add view user profile function

--- a/DiamondStore/Pages/Shared/_Layout.cshtml
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml
@@ -156,7 +156,7 @@
                             </li>
                         </ul>
                         <ul class="nav navbar-nav mgt navbar-right nav_r">
-                            <li><a class="m_tag" href="/UserProfile"><i class="fa fa-user"></i></a></li>
+                            <li><a class="m_tag" href="/User/UserProfile"><i class="fa fa-user"></i></a></li>
                             <li class="dropdown">
                                 <a class="m_tag" href="#" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-shopping-cart"></i></a>
                                 <ul class="dropdown-menu drop_1" role="menu">
@@ -298,6 +298,7 @@
         </section>
     </footer>
 
+    <script src="https://kit.fontawesome.com/6208ee92db.js" crossorigin="anonymous"></script>
     <script src="~/js/jquery-2.1.1.min.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/site.js"></script>
