--- a/DiamondStore/Pages/User/UserProfile.cshtml
+++ b/DiamondStore/Pages/User/UserProfile.cshtml
@@ -52,7 +52,14 @@
                                 <div class="mx-auto" style="width: 140px;">
                                     <div class="d-flex justify-content-center align-items-center rounded-circle"
                                          style="height: 140px; background-color: rgb(233, 236, 239);">
-                                        <span style="color: rgb(166, 168, 170); font: bold 8pt Arial;">140x140</span>
+                                        @if (!string.IsNullOrEmpty(Model.UserProfile.AvatarUrl))
+                                        {
+                                            <img src="@Model.UserProfile.AvatarUrl" alt="User Avatar" class="rounded-circle" style="height: 100%; width: 100%; object-fit: cover;" />
+                                        }
+                                        else
+                                        {
+                                            <span style="color: rgb(166, 168, 170); font: bold 8pt Arial;">140x140</span>
+                                        }
                                     </div>
                                 </div>
                             </div>
@@ -78,6 +85,7 @@
                         <div class="tab-content pt-3">
                             <div class="tab-pane active">
                                 <form method="post" class="form" novalidate>
+                                    <input type="hidden" asp-for="UserProfile.UserId" />
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
