--- a/DiamondStore/Pages/User/UserProfile.cshtml
+++ b/DiamondStore/Pages/User/UserProfile.cshtml
@@ -25,7 +25,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-2" href="#">
+                                <a class="nav-link px-2" href="/User/ChangePassword">
                                     <i class="fa-solid fa-retweet fa-fw mr-2"></i>
                                     <span>Change Password</span>
                                 </a>
