fix user profile, update avatar function

--- a/DiamondStore/Pages/Auth/ForgotPassword.cshtml
+++ b/DiamondStore/Pages/Auth/ForgotPassword.cshtml
@@ -37,7 +37,7 @@
                             <div class="btn-layer"></div>
                             <input type="submit" value="Send Password Reset Email">
                         </div>
-                        <div class="signup-link">Already a member? <a href="/Login" id="">Sign In</a></div>
+                        <div class="signup-link">Already a member? <a href="./Login" id="">Sign In</a></div>
                     </form>
                 </div>
             </div>
