--- a/DiamondStore/Pages/User/UserProfile.cshtml
+++ b/DiamondStore/Pages/User/UserProfile.cshtml
@@ -19,7 +19,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-2" href="#">
+                                <a class="nav-link px-2" href="/User/OrderHistory">
                                     <i class="fa-solid fa-file-lines fa-fw mr-2"></i>
                                     <span>Order History</span>
                                 </a>
