new paging, sort and filter diamond

--- a/DiamondStore/Pages/Shared/_Layout.cshtml
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha256-2XFplPlrFClt0bIdPgpz8H7ojnk10H69xRqd9+uTShA=" crossorigin="anonymous" />
 </head>
+<body>
     <header>
         <section id="top">
             <div class="container">
@@ -93,7 +94,7 @@
                             <li class="dropdown">
                                 <a class="m_tag" href="#" data-toggle="dropdown" role="button" aria-expanded="false">Product<span class="caret"></span></a>
                                 <ul class="dropdown-menu drop_3" role="menu">
-                                    <li><a href="/Product">Product</a></li>
+                                    <li><a href="/Diamond">Diamond</a></li>
                                     <li><a class="border_none" href="/ProductDetail">Product Detail</a></li>
                                 </ul>
                             </li>
@@ -304,5 +305,7 @@
     <script src="~/js/site.js"></script>
     <script src="~/js/ziehharmonika.js"></script>
 
+
     @RenderSection("Scripts", required: false)
+</body>
 </html>
