Paging, sort and filter jewelry

--- a/DiamondStore/Pages/Shared/_Layout.cshtml
+++ b/DiamondStore/Pages/Shared/_Layout.cshtml
@@ -95,6 +95,7 @@
                                 <a class="m_tag" href="#" data-toggle="dropdown" role="button" aria-expanded="false">Product<span class="caret"></span></a>
                                 <ul class="dropdown-menu drop_3" role="menu">
                                     <li><a href="/Diamond">Diamond</a></li>
+                                    <li><a href="/Jewelry">Jewelry</a></li>
                                     <li><a class="border_none" href="/ProductDetail">Product Detail</a></li>
                                 </ul>
                             </li>
