--- a/DiamondStore/Pages/Cart.cshtml
+++ b/DiamondStore/Pages/Cart.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 
-<section id="center" class="center_shop"> 
+<section id="center" class="center_shop">
     <div class="container">
         <div class="row">
             <div class="center_shop_t clearfix">
@@ -17,7 +17,7 @@
                 <div class="col-sm-6">
                     <div class="center_shop_tr text-right clearfix">
                         <h6 class="col_2">You are here: <a href="/">Home</a> / Shopping Cart</h6>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </div>
@@ -40,102 +40,57 @@
                     <div class="cart_3l clearfix">
                         <h5 class="mgt">PRODUCT</h5>
                     </div>
-                    <div class="cart_3l1 clearfix">
-                        <div class="col-sm-3 space_left">
-                            <div class="cart_3l1i clearfix">
-                                <a href="#"><img src="~/img/17.jpg" alt="abc" class="iw"></a>
-                            </div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="cart_3l1i1 clearfix">
-                                <h5 class="mgt"><a href="#">Naminos elementum disus tincidunts cosmo de cosmopolis</a></h5>
-                                <h5 class="normal">RED / XS</h5>
-                                <h6>Vendor</h6>
-                                <h4>$175.00</h4>
-                                <h5>Quantity</h5>
-                            </div>
-                            <div class="cart_3l1i2 clearfix">
-                                <div class="input-group number-spinner">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" data-dir="dwn"><span class="glyphicon glyphicon-minus"></span></button>
-                                    </span>
-                                    <input type="text" class="form-control text-center" value="1">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" data-dir="up"><span class="glyphicon glyphicon-plus"></span></button>
-                                    </span>
+                    @foreach (var item in Model.CartItems)
+                    {
+                        <div class="cart_3l1 clearfix">
+                            <div class="col-sm-3 space_left">
+                                <div class="cart_3l1i clearfix">
+                                    <a href="#">
+                                        <img src="@(item.Diamond?.Image?.ImageUrl ?? item.Jewelry?.Image?.ImageUrl)" alt="Product Image" class="iw">
+                                    </a>
                                 </div>
-                                <h6 class="mgt"><a class="button_1 mgt" href="#">REMOVE</a></h6>
-                                <h6 class="mgt"><a class="button mgt" href="#">UPDATE CART</a></h6>
                             </div>
-                        </div>
-                    </div>
-                    <div class="cart_3l1 clearfix">
-                        <div class="col-sm-3 space_left">
-                            <div class="cart_3l1i clearfix">
-                                <a href="#"><img src="~/img/18.jpg" alt="abc" class="iw"></a>
-                            </div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="cart_3l1i1 clearfix">
-                                <h5 class="mgt"><a href="#">Naminos elementum disus tincidunts cosmo de cosmopolis</a></h5>
-                                <h5 class="normal">RED / XS</h5>
-                                <h6>Vendor</h6>
-                                <h4>$175.00</h4>
-                                <h5>Quantity</h5>
-                            </div>
-                            <div class="cart_3l1i2 clearfix">
-                                <div class="input-group number-spinner">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" data-dir="dwn"><span class="glyphicon glyphicon-minus"></span></button>
-                                    </span>
-                                    <input type="text" class="form-control text-center" value="1">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" data-dir="up"><span class="glyphicon glyphicon-plus"></span></button>
-                                    </span>
+                            <div class="col-sm-9">
+                                <div class="cart_3l1i1 clearfix">
+                                    <h5 class="mgt">
+                                        <a href="#">
+                                            @(item.Diamond?.DiamondName ?? item.Jewelry?.JewelryName)
+                                        </a>
+                                    </h5>
+                                    <h4>@(item.Diamond != null ? ((decimal)item.Diamond.DiamondPrice).ToString("C") : ((decimal)item.Jewelry.TotalPrice).ToString("C"))</h4>
+                                    <h5>Quantity</h5>
                                 </div>
-                                <h6 class="mgt"><a class="button_1 mgt" href="#">REMOVE</a></h6>
-                                <h6 class="mgt"><a class="button mgt" href="#">UPDATE CART</a></h6>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="cart_3l1 border_none clearfix">
-                        <div class="col-sm-3 space_left">
-                            <div class="cart_3l1i clearfix">
-                                <a href="#"><img src="~/img/19.jpg" alt="abc" class="iw"></a>
-                            </div>
-                        </div>
-                        <div class="col-sm-9">
-                            <div class="cart_3l1i1 clearfix">
-                                <h5 class="mgt"><a href="#">Naminos elementum disus tincidunts cosmo de cosmopolis</a></h5>
-                                <h5 class="normal">RED / XS</h5>
-                                <h6>Vendor</h6>
-                                <h4>$175.00</h4>
-                                <h5>Quantity</h5>
-                            </div>
-                            <div class="cart_3l1i2 clearfix">
-                                <div class="input-group number-spinner">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" data-dir="dwn"><span class="glyphicon glyphicon-minus"></span></button>
-                                    </span>
-                                    <input type="text" class="form-control text-center" value="1">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-default" data-dir="up"><span class="glyphicon glyphicon-plus"></span></button>
-                                    </span>
+                                <div class="cart_3l1i2 clearfix">
+                                    <form method="post">
+                                        <div class="input-group number-spinner">
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-default" data-dir="dwn" formaction="/Cart?handler=Update" formmethod="post" name="cartId" value="@item.CartId" onclick="this.form.submit()"><span class="glyphicon glyphicon-minus"></span></button>
+                                            </span>
+                                            <input type="text" class="form-control text-center" name="quantity" value="@item.Quantity">
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-default" data-dir="up" formaction="/Cart?handler=Update" formmethod="post" name="cartId" value="@item.CartId" onclick="this.form.submit()"><span class="glyphicon glyphicon-plus"></span></button>
+                                            </span>
+                                        </div>
+                                        <button class="button_1 mgt" formaction="/Cart?handler=Remove" formmethod="post" name="cartId" value="@item.CartId">REMOVE</button>
+                                    </form>
                                 </div>
-                                <h6 class="mgt"><a class="button_1 mgt" href="#">REMOVE</a></h6>
-                                <h6 class="mgt"><a class="button mgt" href="#">UPDATE CART</a></h6>
                             </div>
                         </div>
-                    </div>
+                    }
                 </div>
                 <div class="col-sm-4">
                     <div class="cart_3r clearfix">
                         <h5 class="mgt head_1">SUBTOTAL</h5>
-                        <h3 class="text-center">$1,347.00</h3>
+                        <h3 class="text-center">
+                            @Model.CartItems.Sum(i => (i.Diamond != null ? (decimal)i.Diamond.DiamondPrice : (decimal)i.Jewelry.TotalPrice) * i.Quantity.GetValueOrDefault()).ToString("C")
+                        </h3>
                         <hr>
                         <h6>Additional comments</h6>
                         <textarea class="form-control"></textarea>
-                        <h5 class="text-center"><a class="button" href="checkout.html">PROCEED TO CHECKOUT</a></h5><br>
+                        <h5 class="text-center">
+                            <a class="button" href="checkout.html">PROCEED TO CHECKOUT</a>
+                        </h5>
+                        <br>
                         <h5>GET SHIPPING ESTIMATES</h5>
                         <hr>
                     </div>
@@ -161,24 +116,24 @@
                 </div>
             </div>
         </div>
-    </div>	 
+    </div>
 </section>
 
 @section Scripts {
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
             var secondaryNav = $('.cd-secondary-nav'),
                 secondaryNavTopPosition = secondaryNav.offset().top;
-            $(window).on('scroll', function(){
-                if($(window).scrollTop() > secondaryNavTopPosition ) {
-                    secondaryNav.addClass('is-fixed');    
+            $(window).on('scroll', function () {
+                if ($(window).scrollTop() > secondaryNavTopPosition) {
+                    secondaryNav.addClass('is-fixed');
                 } else {
                     secondaryNav.removeClass('is-fixed');
                 }
-            });    
+            });
         });
 
-        $(document).on('click', '.number-spinner button', function () {    
+        $(document).on('click', '.number-spinner button', function () {
             var btn = $(this),
                 oldValue = btn.closest('.number-spinner').find('input').val().trim(),
                 newVal = 0;
@@ -195,4 +150,3 @@
         });
     </script>
 }
-
