--- a/DiamondStore/Pages/Cart.cshtml
+++ b/DiamondStore/Pages/Cart.cshtml
@@ -41,69 +41,122 @@
                     </div>
                     @foreach (var item in Model.CartItems)
                     {
-                        <div class="cart_3l1 clearfix">
-                            <div class="col-sm-3 space_left">
-                                <div class="cart_3l1i clearfix">
-                                    <a href="@(item.Diamond != null ? Url.Page("/DiamondDetail", new { id = item.Diamond.DiamondId }) : Url.Page("/JewelryDetail", new { id = item.Jewelry.JewelryId }))">
-                                        <img src="@(item.Diamond?.Image?.ImageUrl ?? item.Jewelry?.Image?.ImageUrl)" alt="Product Image" class="iw">
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="col-sm-9">
-                                <div class="cart_3l1i1 clearfix">
-                                    <h5 class="mgt">
-                                        <a href="@(item.Diamond != null ? Url.Page("/DiamondDetail", new { id = item.Diamond.DiamondId }) : Url.Page("/JewelryDetail", new { id = item.Jewelry.JewelryId }))">
-                                            @(item.Diamond?.DiamondName ?? item.Jewelry?.JewelryName ?? "N/A")
+                        @foreach (var diamond in item.CartDiamonds)
+                        {
+                            <div class="cart_3l1 clearfix">
+                                <div class="col-sm-3 space_left">
+                                    <div class="cart_3l1i clearfix">
+                                        <a href="@(Url.Page("/DiamondDetail", new { id = diamond.Diamond.DiamondId }))">
+                                            <img src="@(diamond.Diamond?.Image?.ImageUrl)" alt="Product Image" class="iw">
                                         </a>
-                                    </h5>
-                                    <h4>
-                                        @(item.Diamond != null ? ((decimal)item.Diamond.DiamondPrice).ToString("C") :
-                                            (item.Jewelry != null ? ((decimal)item.Jewelry.TotalPrice).ToString("C") : "N/A"))
-                                    </h4>
-                                    <h5>Quantity</h5>
+                                    </div>
                                 </div>
-                                <div class="cart_3l1i2 clearfix">
-                                    <form method="post">
-                                        <div class="input-group number-spinner">
-                                            <span class="input-group-btn">
-                                                <button class="btn btn-default" data-dir="dwn" formaction="/Cart?handler=Update" formmethod="post" name="cartId" value="@item.CartId" onclick="this.form.submit()">
-                                                    <span class="glyphicon glyphicon-minus"></span>
-                                                </button>
-                                            </span>
-                                            <input type="text" class="form-control text-center" name="quantity" value="@item.Quantity">
-                                            <span class="input-group-btn">
-                                                <button class="btn btn-default" data-dir="up" formaction="/Cart?handler=Update" formmethod="post" name="cartId" value="@item.CartId" onclick="this.form.submit()">
-                                                    <span class="glyphicon glyphicon-plus"></span>
-                                                </button>
-                                            </span>
-                                        </div>
-                                        <button class="button_1 mgt" formaction="/Cart?handler=Remove" formmethod="post" name="cartId" value="@item.CartId">REMOVE</button>
-                                    </form>
+                                <div class="col-sm-9">
+                                    <div class="cart_3l1i1 clearfix">
+                                        <h5 class="mgt">
+                                            <a href="@(Url.Page("/DiamondDetail", new { id = diamond.Diamond.DiamondId }))">
+                                                @(diamond.Diamond?.DiamondName ?? "N/A")
+                                            </a>
+                                        </h5>
+                                        <h5>Quantity</h5>
+                                    </div>
+                                    <div class="cart_3l1i2 clearfix">
+                                        <form method="post">
+                                            <input type="hidden" name="cartId" value="@item.CartId" />
+                                            <input type="hidden" name="itemId" value="@diamond.CartDiamondId" />
+                                            <input type="hidden" name="itemType" value="Diamond" />
+                                            <div class="input-group number-spinner">
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-default" type="submit" formaction="/Cart?handler=Update" formmethod="post" name="quantity" value="@(diamond.Quantity - 1)">
+                                                        <span class="glyphicon glyphicon-minus"></span>
+                                                    </button>
+                                                </span>
+                                                <input type="text" class="form-control text-center" name="quantityInput" value="@diamond.Quantity" readonly>
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-default" type="submit" formaction="/Cart?handler=Update" formmethod="post" name="quantity" value="@(diamond.Quantity + 1)">
+                                                        <span class="glyphicon glyphicon-plus"></span>
+                                                    </button>
+                                                </span>
+                                            </div>
+                                            <button class="button_1 mgt" formaction="/Cart?handler=Remove" formmethod="post" name="itemId" value="@diamond.CartDiamondId">REMOVE</button>
+                                            <input type="hidden" name="itemType" value="Diamond" />
+                                        </form>
+                                    </div>
+                                    <div>
+                                        <h5>Total Price: @((decimal)(diamond.Diamond?.DiamondPrice ?? 0) * diamond.Quantity)</h5>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        }
+                        @foreach (var jewelry in item.CartJewelries)
+                        {
+                            <div class="cart_3l1 clearfix">
+                                <div class="col-sm-3 space_left">
+                                    <div class="cart_3l1i clearfix">
+                                        <a href="@(Url.Page("/JewelryDetail", new { id = jewelry.Jewelry.JewelryId }))">
+                                            <img src="@(jewelry.Jewelry?.Image?.ImageUrl)" alt="Product Image" class="iw">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="cart_3l1i1 clearfix">
+                                        <h5 class="mgt">
+                                            <a href="@(Url.Page("/JewelryDetail", new { id = jewelry.Jewelry.JewelryId }))">
+                                                @(jewelry.Jewelry?.JewelryName ?? "N/A")
+                                            </a>
+                                        </h5>
+                                        <h5>Quantity</h5>
+                                    </div>
+                                    <div class="cart_3l1i2 clearfix">
+                                        <form method="post">
+                                            <input type="hidden" name="cartId" value="@item.CartId" />
+                                            <input type="hidden" name="itemId" value="@jewelry.CartJewelryId" />
+                                            <input type="hidden" name="itemType" value="Jewelry" />
+                                            <div class="input-group number-spinner">
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-default" type="submit" formaction="/Cart?handler=Update" formmethod="post" name="quantity" value="@(jewelry.Quantity - 1)">
+                                                        <span class="glyphicon glyphicon-minus"></span>
+                                                    </button>
+                                                </span>
+                                                <input type="text" class="form-control text-center" name="quantityInput" value="@jewelry.Quantity" readonly>
+                                                <span class="input-group-btn">
+                                                    <button class="btn btn-default" type="submit" formaction="/Cart?handler=Update" formmethod="post" name="quantity" value="@(jewelry.Quantity + 1)">
+                                                        <span class="glyphicon glyphicon-plus"></span>
+                                                    </button>
+                                                </span>
+                                            </div>
+                                            <button class="button_1 mgt" formaction="/Cart?handler=Remove" formmethod="post" name="itemId" value="@jewelry.CartJewelryId">REMOVE</button>
+                                            <input type="hidden" name="itemType" value="Jewelry" />
+                                        </form>
+                                    </div>
+                                    <div>
+                                        <h5>Total Price: @(jewelry.Jewelry?.TotalPrice * jewelry.Quantity ?? 0)</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        }
                     }
                 </div>
                 <div class="col-sm-4">
                     <div class="cart_3r clearfix">
                         <h5 class="mgt head_1">SUBTOTAL</h5>
                         <h3 class="text-center">
-                            @Model.CartItems.Sum(i => (i.Diamond != null ? (decimal)i.Diamond.DiamondPrice :
-                                     (i.Jewelry != null ? (decimal)i.Jewelry.TotalPrice : 0)) * i.Quantity.GetValueOrDefault()).ToString("C")
+                            @Model.CartItems.Sum(i => (decimal)i.CartJewelries.Sum(cj => cj.Jewelry.TotalPrice * cj.Quantity) + (decimal)i.CartDiamonds.Sum(cd => cd.Diamond.DiamondPrice * cd.Quantity)).ToString("C")
                         </h3>
                         <hr>
                         <h6>Available Promotions</h6>
                         <div class="promotion-list">
-                            @foreach (var promotion in Model.UserPromotions)
-                            {
-                                <div class="promotion-item">
-                                    <p><strong>Promotion Type:</strong> @promotion.Promotion.PromotionType</p>
-                                    <p><strong>Description:</strong> @promotion.Promotion.Description</p>
-                                    <p><strong>Discount Rate:</strong> @promotion.Promotion.DiscountRate%</p>
-                                    <p><strong>Expires On:</strong> @promotion.ExpiredDate.ToShortDateString()</p>
-                                </div>
-                                <hr>
-                            }
+                            <form method="post" asp-page-handler="ApplyPromotions">
+                                @foreach (var promotion in Model.UserPromotions)
+                                {
+                                    <div class="promotion-item">
+                                        <input type="checkbox" name="selectedPromotions" value="@promotion.PromotionId" />
+                                        <label>@promotion.Promotion.PromotionType - @promotion.Promotion.Description (@promotion.Promotion.DiscountRate%)</label>
+                                    </div>
+                                    <hr>
+                                }
+                                <button type="submit" class="button">Apply Promotions</button>
+                            </form>
                         </div>
                         <h5 class="text-center">
                             <a class="button" href="checkout.html">PROCEED TO CHECKOUT</a>
